--- a/eww/dashboard/eww.scss
+++ b/eww/dashboard/eww.scss
@@ -1,377 +1,357 @@
 /** Global *******************************************/
-*{
+
+* {
 	all: unset;
 	font-family: feather;
 	font-family: Iosevka;
 }
 
 /** Background ***************************************/
+
 .bg {
 	background-image: url("images/bg.png");
 	background-color: #474D59;
 	opacity: 1;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 /** Generic window ***********************************/
+
 .genwin {
 	background-color: #2E3440;
-	border-radius: 16px;
+	border-radius: 1.2vw;
+	padding: 0.7vw 0.9vw;
 }
 
 /** Profile ******************************************/
+
 .face {
-	background-size: 200px;
-	min-height: 200px;
-	min-width: 200px;
-	margin: 65px 0px 0px 0px;
-	border-radius: 100%;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	min-height: 13vw;
+	min-width: 13vw;
+	margin: 1.2vw 0 0 0;
+	border-radius: 50%;
 }
 
 .fullname {
 	color: #D46389;
-	font-size : 30px;
-	font-weight : bold;
+	font-size: 1.9vw;
+	font-weight: bold;
 }
 
 .username {
 	color: #8FBCBB;
-	font-size : 22px;
-	font-weight : bold;
-	margin : -15px 0px 0px 0px;
+	font-size: 1.3vw;
+	font-weight: bold;
+	margin: -0.7vw 0 0 0;
 }
 
 /** System ********************************************/
-.iconcpu, .iconmem, .iconbright, .iconbat {
-	font-size : 32px;
-	font-weight : normal;
-}
-.iconcpu {
-	color: #BF616A;
-}
-.iconmem {
-	color: #A3BE8C;
-}
-.iconbright {
-	color: #EBCB8B;
-}
-.iconbat {
-	color: #88C0D0;
+
+.iconcpu, .iconmem, .iconvolume, .iconupdate {
+	font-size: 2vw;
+	font-weight: normal;
 }
 
-.cpu_bar, .mem_bar, .bright_bar, .bat_bar, scale trough {
+.iconcpu { color: #BF616A; }
+.iconmem { color: #A3BE8C; }
+.iconvolume { color: #EBCB8B; }
+.iconupdate { color: #88C0D0; }
+
+.cpu_bar, .mem_bar, .vol_bar, scale trough {
 	all: unset;
 	background-color: #3A404C;
-	border-radius: 16px;
-	min-height: 28px;
-	min-width: 240px;
+	border-radius: 1.2vw;
+	min-height: 1.5vw;
+	min-width: 14.5vw;
 }
 
-.cpu_bar, .mem_bar, .bright_bar, .bat_bar, scale trough highlight {
+.cpu_bar, .mem_bar, .vol_bar, scale trough highlight {
 	all: unset;
-	border-radius: 16px;
+	border-radius: 1.2vw;
 }
 
-.cpu_bar scale trough highlight {
-	background-color: #BF616A;
+.cpu_bar scale trough highlight { background-color: #BF616A; }
+.mem_bar scale trough highlight { background-color: #A3BE8C; }
+.vol_bar scale trough highlight { background-color: #EBCB8B; }
+
+.update_bar {
+	all: unset;
+	background-color: #3A404C;
+	border-radius: 1.2vw;
+	padding: 0.6vw 1.2vw;
+	min-height: 1.5vw;
 }
-.mem_bar scale trough highlight {
-	background-color: #A3BE8C;
-}
-.bright_bar scale trough highlight {
-	background-color: #EBCB8B;
-}
-.bat_bar scale trough highlight {
-	background-color: #88C0D0;
+
+.labelupdate {
+	color: #88C0D0;
+	font-size: 1vw;
+	font-weight: bold;
 }
 
 /** Clock ********************************************/
+
 .time_hour, .time_min {
 	color: #81A1C1;
-	font-size : 70px;
-	font-weight : bold;
+	font-size: 4vw;
+	font-weight: bold;
 }
-.time_hour {
-	margin : 15px 0px 0px 20px;
-}
-.time_min {
-	margin : 0px 0px 10px 0px;
-}
+
+.time_hour { margin: 0.6vw 0 0 0.9vw; }
+.time_min { margin: 0 0 0.4vw 0; }
 
 .time_mer {
 	color: #A3BE8C;
-	font-size : 40px;
-	font-weight : bold;
-	margin : 20px 0px 0px 0px;
+	font-size: 2vw;
+	font-weight: bold;
+	margin: 0.6vw 0 0 0;
 }
 
 .time_day {
 	color: #EBCB8B;
-	font-size : 30px;
-	font-weight : normal;
-	margin : 0px 0px 20px -20px;
+	font-size: 1.5vw;
+	font-weight: normal;
+	margin: 0 0 0.7vw -0.7vw;
 }
 
 /** Uptime ********************************************/
-.icontimer {
-	color: #B48EAD;
-	font-size : 90px;
-	font-weight : normal;
+
+.icontimer { 
+	color: #B48EAD; 
+	font-size: 4vw;
 }
 
-.uphour {
-	color: #E5E9F0;
-	font-size : 42px;
-	font-weight : bold;
+.uphour { 
+	color: #E5E9F0; 
+	font-size: 2vw;
+	font-weight: bold; 
 }
 
-.upmin {
-	color: #E5E9F0;
-	font-size : 32px;
-	font-weight : bold;
+.upmin { 
+	color: #E5E9F0; 
+	font-size: 1.6vw;
+	font-weight: bold; 
 }
 
-/** Music ***************************************/
+/** Music ********************************************/
+
 .album_art {
-	background-size: 240px;
-	min-height: 240px;
-	min-width: 240px;
-	margin: 20px;
-	border-radius: 14px;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	min-height: 13vw;
+	min-width: 13vw;
+	margin: 0.7vw;
+	border-radius: 1vw;
 }
 
-.song {
-	color: #8FBCBB;
-	font-size : 24px;
-	font-weight : bold;
-	margin : 40px 0px 0px 0px;
+.song { 
+	color: #8FBCBB; 
+	font-size: 1.3vw;
+	font-weight: bold; 
+	margin: 0.7vw 0 0 0;
 }
 
-.artist {
-	color: #EBCB8B;
-	font-size : 16px;
-	font-weight : normal;
-	margin : 0px 0px 15px 0px;
+.artist { 
+	color: #EBCB8B; 
+	font-size: 1vw;
+	margin: 0 0 0.4vw 0;
 }
 
-.btn_prev, .btn_play, .btn_next {
-	font-family: Iosevka Nerd Font;
-}
-.btn_prev {
-	color: #EBCB8B;
-	font-size : 32px;
-	font-weight : normal;
-}
-.btn_play {
-	color: #A3BE8C;
-	font-size : 48px;
-	font-weight : bold;
-}
-.btn_next {
-	color: #EBCB8B;
-	font-size : 32px;
-	font-weight : normal;
+.btn_prev, .btn_play, .btn_next { 
+	font-family: Iosevka Nerd Font; 
 }
 
-.music_bar scale trough highlight {
-	all: unset;
-	background-color: #B48EAD;
-	border-radius: 8px;
+.btn_prev { 
+	color: #EBCB8B; 
+	font-size: 1.7vw;
 }
+
+.btn_play { 
+	color: #A3BE8C; 
+	font-size: 2.3vw;
+	font-weight: bold; 
+}
+
+.btn_next { 
+	color: #EBCB8B; 
+	font-size: 1.7vw;
+}
+
+.music_bar scale trough highlight { 
+	all: unset; 
+	background-color: #B48EAD; 
+	border-radius: 0.6vw;
+}
+
 .music_bar scale trough {
 	all: unset;
 	background-color: #3A404C;
-	border-radius: 8px;
-	min-height: 20px;
-	min-width: 310px;
-	margin : 10px 0px 0px 0px;
+	border-radius: 0.6vw;
+	min-height: 0.9vw;
+	min-width: 14.5vw;
+	margin: 0.4vw 0 0 0;
 }
 
-/** Weather ***************************************/
+/** Weather ********************************************/
+
 .iconweather {
 	font-family: Iosevka Nerd Font;
-	font-size : 120px;
-	font-weight : normal;
-	margin : 15px 0px 0px 30px;
+	font-size: 5.2vw;
+	margin: 0.6vw 0 0 0.9vw;
 }
 
-.label_temp {
-	color : #A6D1DD;
-	font-size : 80px;
-	font-weight : bold;
-	margin : -15px 30px 0px 0px;
+.label_temp { 
+	color: #A6D1DD; 
+	font-size: 3.5vw;
+	font-weight: bold; 
+	margin: -0.4vw 0.9vw 0 0;
 }
 
-.label_stat {
-	color : #BF616A;
-	font-size : 38px;
-	font-weight : bold;
+.label_stat { 
+	color: #BF616A; 
+	font-size: 1.7vw;
+	font-weight: bold; 
 }
 
-.label_quote {
-	color : #E5E5E5;
-	font-size : 18px;
-	font-weight : normal;
+.label_quote { 
+	color: #E5E5E5; 
+	font-size: 1vw;
 }
 
-/** Applications ***************************************/
-.appbox {
-	margin : 15px 0px 0px 25px;
+/** Applications grid (Firefox/Discord/etc.) *********/
+
+.appbox { 
+	margin: 0.6vw 0 0 0.9vw;
 }
 
 .app_fox, .app_telegram, .app_discord, .app_terminal,
-.app_files, .app_geany, .app_code, .app_gimp, .app_vbox {
-    background-repeat: no-repeat;
-	background-size: 64px;
-	min-height: 64px;
-	min-width: 64px;
-	margin: 8px 8px 0px 8px;
+.app_files, .app_geany, .app_code, .app_gimp, .app_vbox,
+.app_notepadqq, .app_blender, .app_metasploit, .app_burp, .app_boxes {
+	background-repeat: no-repeat;
+	background-size: 3.2vw 3.2vw;
+	min-height: 3.2vw;
+	min-width: 3.2vw;
+	margin: 0.4vw;
 }
 
-.app_fox {}
-.app_telegram {}
-.app_discord {}
-.app_terminal {}
-.app_files {}
-.app_geany {}
-.app_code {}
-.app_gimp {}
-.app_vbox {}
+/** Quick apps tiles (GitHub/Reddit/Youtube/Mail) ****/
 
-/** Links ***************************************/
+.github, .reddit, .twitter, .youtube, .mail, .perplexity, .google {
+	border-radius: 1.2vw;
+	min-width: 6.5vw;
+	min-height: 6.5vw;
+	padding: 0.6vw;
+}
+
 .iconweb, .iconmail {
 	color: #FFFFFF;
 	font-family: Iosevka Nerd Font;
-	font-size : 70px;
-	font-weight : normal;
-}
-.iconmail {
-	color: #DF584E;
+	font-size: 2.9vw;
+	font-weight: normal;
 }
 
-.github {
-	background-color: #24292E;
-	border-radius: 16px;
-}
-.reddit {
-	background-color: #E46231;
-	border-radius: 16px;
-}
-.twitter {
-	background-color: #61AAD6;
-	border-radius: 16px;
-}
-.youtube {
-	background-color: #DF584E;
-	border-radius: 16px;
-}
-.mail {
-	background-color: #FFFFFF;
-	border-radius: 16px;
-}
+.iconmail { color: #DF584E; }
+
+/** Mail widget inner badge ***************************/
 
 .mailbox {
 	background-color: #E5E5E5;
-	border-radius: 10px;
-	margin: 48px 0px 48px 0px;
+	border-radius: 0.7vw;
+	margin: 1.2vw 0;
 }
+
 .label_mails {
 	color: #404040;
-	font-size : 32px;
-	font-weight : bold;
-	margin: 0px 12px 0px 12px;
+	font-size: 1.5vw;
+	font-weight: bold;
+	margin: 0 0.6vw;
 }
 
-/** Power buttons ***************************************/
+/** Power buttons *************************************/
+
 .btn_logout, .btn_sleep, .btn_reboot, .btn_poweroff {
-	font-size : 48px;
-	font-weight : bold;
+	font-size: 2.3vw;
+	font-weight: bold;
 }
 
-.btn_logout {
-	color: #BF616A;
-}
-.btn_sleep {
-	color: #A3BE8C;
-}
-.btn_reboot {
-	color: #EBCB8B;
-}
-.btn_poweroff {
-	color: #88C0D0;
+.btn_logout { color: #BF616A; }
+.btn_sleep { color: #A3BE8C; }
+.btn_reboot { color: #EBCB8B; }
+.btn_poweroff { color: #88C0D0; }
+
+/** Home folders **************************************/
+
+.hddbox { 
+	background-color: #3A404C; 
+	border-radius: 0.7vw;
+	margin: 0.7vw;
 }
 
-/** Home folders ***************************************/
-.hddbox {
-	background-color: #3A404C;
-	border-radius: 10px;
-	margin : 15px;
+.hddicon { 
+	color: #81A1C1; 
+	font-family: Iosevka Nerd Font; 
+	font-size: 3.5vw;
+	margin: 0.9vw 0.9vw 0.9vw 1.3vw;
 }
-.hddicon {
-	color: #81A1C1;
+
+.hdd_label { 
+	color: #E5E9F0; 
+	font-size: 2vw;
+	font-weight: bold; 
+	margin: 0 0 0 0.7vw;
+}
+
+.fs_sep { 
+	color: #2E3440; 
+	font-size: 1.6vw;
+	font-weight: bold; 
+}
+
+/* Home folder (NEW) */
+.iconfolder0 {
 	font-family: Iosevka Nerd Font;
-	font-size : 70px;
-	font-weight : normal;
-	margin : 25px 20px 25px 40px;
-}
-.hdd_label {
-	color: #E5E9F0;
-	font-size : 48px;
-	font-weight : bold;
-	margin : 0px 0px 0px 15px;
-}
-.fs_sep {
-	color: #2E3440;
-	font-size : 36px;
-	font-weight : bold;
+	font-size: 1.6vw;
+	font-weight: normal;
+	margin: 0 0 0 2.3vw;
+	color: #88C0D0;
 }
 
-.iconfolder1, .iconfolder2, .iconfolder3, .iconfolder4, .iconfolder5, .iconfolder6  {
+.label_folder0 {
+	font-size: 1.2vw;
+	font-weight: normal;
+	margin: 0 0 0 1vw;
+	color: #88C0D0;
+}
+
+/* Other folders */
+.iconfolder1, .iconfolder2, .iconfolder3, .iconfolder4, .iconfolder5, .iconfolder6 {
 	font-family: Iosevka Nerd Font;
-	font-size : 32px;
-	font-weight : normal;
-	margin : 0px 0px 0px 75px;
-}
-.iconfolder1 {
-	color: #BF616A;
-}
-.iconfolder2 {
-	color: #A3BE8C;
-}
-.iconfolder3 {
-	color: #EBCB8B;
-}
-.iconfolder4 {
-	color: #81A1C1;
-}
-.iconfolder5 {
-	color: #B48EAD;
-}
-.iconfolder6 {
-	color: #88C0D0;
+	font-size: 1.6vw;
+	font-weight: normal;
+	margin: 0 0 0 2.3vw;
 }
 
-.label_folder1, .label_folder2, .label_folder3, .label_folder4, .label_folder5, .label_folder6  {
-	font-size : 22px;
-	font-weight : normal;
-	margin : 0px 0px 0px 30px;
-}
-.label_folder1 {
-	color: #BF616A;
-}
-.label_folder2 {
-	color: #A3BE8C;
-}
-.label_folder3 {
-	color: #EBCB8B;
-}
-.label_folder4 {
-	color: #81A1C1;
-}
-.label_folder5 {
-	color: #B48EAD;
-}
-.label_folder6 {
-	color: #88C0D0;
+.iconfolder1 { color: #BF616A; }
+.iconfolder2 { color: #A3BE8C; }
+.iconfolder3 { color: #EBCB8B; }
+.iconfolder4 { color: #81A1C1; }
+.iconfolder5 { color: #B48EAD; }
+.iconfolder6 { color: #88C0D0; }
+
+.label_folder1, .label_folder2, .label_folder3, .label_folder4, .label_folder5, .label_folder6 {
+	font-size: 1.2vw;
+	font-weight: normal;
+	margin: 0 0 0 1vw;
 }
 
-/** EOF *************************************************/
+.label_folder1 { color: #BF616A; }
+.label_folder2 { color: #A3BE8C; }
+.label_folder3 { color: #EBCB8B; }
+.label_folder4 { color: #81A1C1; }
+.label_folder5 { color: #B48EAD; }
+.label_folder6 { color: #88C0D0; }
